<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_row_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/img_batik_photo"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_img" />

    <View
        android:id="@+id/middle_view"
        android:layout_width="@dimen/spacing_large"
        android:layout_height="0dp"
        android:layout_toEndOf="@+id/img_batik_photo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/middle_view"
        android:gravity="start|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/batik_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/batik_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/batik_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/batik_from"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/grey_40" />

        <TextView
            android:id="@+id/batik_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:maxLines="2"
            android:text="@string/content_batik_megamendung"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/grey_80" />

    </LinearLayout>

</RelativeLayout>