<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true"
    tools:context=".DetailBatikActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_batik_photo"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/batik_img_detail"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dummy_img" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-70dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_large"
                    android:layout_marginRight="@dimen/spacing_large"
                    android:background="@android:color/white"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/spacing_large"
                            android:paddingRight="@dimen/spacing_large">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/batik_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/batik_name"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                    android:textColor="@color/grey_90" />

                                <TextView
                                    android:id="@+id/batik_from"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/batik_from"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                    android:textColor="@color/grey_40" />

                            </LinearLayout>

                            <ImageButton
                                android:id="@+id/btn_favorite"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:contentDescription="@string/icon_favorit"
                                android:tint="@color/grey_60"
                                app:srcCompat="@drawable/ic_favorite_border" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_middle"
                            android:background="@color/grey_10" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_90"
                            app:fontFamily="sans-serif-medium" />


                        <TextView
                            android:id="@+id/batik_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:layout_marginRight="@dimen/spacing_large"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:lineSpacingExtra="@dimen/spacing_small"
                            android:text="@string/content_batik_megamendung"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_large" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>